fix: reduce gap of form__field

--- a/src/stylesheets/global.scss
+++ b/src/stylesheets/global.scss
@@ -19,7 +19,7 @@ button {
   @include flex($direction: column, $gap: 25);
   width: 100%;
   &__pannel {
-    @include flex($gap: 50);
+    @include flex($gap: 25);
     flex-wrap: wrap;
     width: 100%;
   }
